tests/miniJava/neg/003877_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { int if ( 0 ) { } else { } } }
